# projeto-final-compile-conquer-1

./: readme.md
.devcontainer/: Dockerfile  devcontainer.json
Etapa_1/: readme.md
Etapa_2/: hardware_diagram_wearable_device.md  software_flowchart.md
Etapa_3/: readme.md
Fall_Detection/: CMakeLists.txt  main.c  main.cpp  readme.md
Fall_Detection/include/: FreeRTOSConfig.h  atgm336h_uart.h  button.h  buzzer.h  config.h  config_web_server.h  fall_detection.h  gps.h  led.h  memory.h  mpu6050_i2c.h  network.h  sensor.h  task_watchdog.h  types.h  wifi.h
Fall_Detection/model/: CMakeLists.txt  README.txt
Fall_Detection/model/edge-impulse-sdk/cmake/zephyr/: CMakeLists.txt
Fall_Detection/model/model-parameters/: model_metadata.h  model_variables.h
Fall_Detection/model/tflite-model/: tflite_learn_3_compiled.cpp  tflite_learn_3_compiled.h
Fall_Detection/mongoose-minimal/: mongoose_config.h
Fall_Detection/src/: atgm336h_uart.c  button.cpp  buzzer.cpp  config.cpp  config_web_server.cpp  fall_detection.cpp  gps.cpp  led.cpp  memory.cpp  mpu6050_i2c.c  network.cpp  sensor.cpp  task_watchdog.cpp  wifi.cpp
Machine_Learning_Scripts_Data/: my_current_model_best.py  preprocess_dataset_script.py  readme.md
Machine_Learning_Scripts_Data/Processed_dataset/Daily/: D01_SA01_R01.csv  D01_SA02_R01.csv  D01_SA03_R01.csv  D01_SA04_R01.csv  D01_SA05_R01.csv  D01_SA06_R01.csv  D01_SA07_R01.csv  D01_SA08_R01.csv  D01_SA09_R01.csv  D01_SA10_R01.csv  D01_SA11_R01.csv  D01_SA12_R01.csv  D01_SA13_R01.csv  D01_SA14_R01.csv  D01_SA15_R01.csv  D01_SA16_R01.csv  D01_SA17_R01.csv  D01_SA18_R01.csv  D01_SA19_R01.csv  D01_SA20_R01.csv  D01_SA21_R01.csv  D01_SA22_R01.csv  D01_SA23_R01.csv  D01_SE01_R01.csv  D01_SE02_R01.csv  D01_SE03_R01.csv  D01_SE04_R01.csv  D01_SE05_R01.csv  D01_SE06_R01.csv  D01_SE07_R01.csv  D01_SE08_R01.csv  D01_SE09_R01.csv  D01_SE10_R01.csv  D01_SE11_R01.csv  D01_SE12_R01.csv  D01_SE13_R01.csv  D01_SE14_R01.csv  D01_SE15_R01.csv  D02_SA01_R01.csv  D02_SA02_R01.csv  (+2662 more)
Machine_Learning_Scripts_Data/Processed_dataset/Fall/: F01_SA01_R01.csv  F01_SA01_R02.csv  F01_SA01_R03.csv  F01_SA01_R04.csv  F01_SA01_R05.csv  F01_SA02_R01.csv  F01_SA02_R02.csv  F01_SA02_R03.csv  F01_SA02_R04.csv  F01_SA02_R05.csv  F01_SA03_R01.csv  F01_SA03_R02.csv  F01_SA03_R03.csv  F01_SA03_R04.csv  F01_SA03_R05.csv  F01_SA04_R01.csv  F01_SA04_R02.csv  F01_SA04_R03.csv  F01_SA04_R04.csv  F01_SA04_R05.csv  F01_SA05_R01.csv  (+1777 more)
gas_sensor_http/: .gitignore  CMakeLists.txt  README.md  main.c
gas_sensor_http/include/: FreeRTOSConfig.h  mbedtls_config.h
gas_sensor_http/mongoose-minimal/: lwipopts.h  mongoose_config.h
